--- a/home.html
+++ b/home.html
@@ -1,70 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700;900&display=swap" rel="stylesheet">
-    <script defer src="https://kit.fontawesome.com/a9c333dba5.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js" ></script>
-    <title>Rick & Morty WIKI</title>
-</head>
-<body>
-    <div id="modal"></div>
-    <header class="header">
-        <h2 class="header__h2">Rick & Morty<span class="header__span"> Wiki</span></h2>
-        <nav class="header__nav">
-            <ul class="header__ul">
-                <li class="header__current">Characters</li>
-                <li class="header__li"><a class = "none" href="/episodes/episodes.html">Episodes</a></li>
-                <li class="header__li"><a class = "none" href="/locations/locations.html">Locations</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="main">
-        <h1 class="main__h1">Characters</h1>
-        <input id="selNameCharacters" tipe="search" placeholder="Rick Sanchez" class="search">
-        <div class="content">
-            <section class="filterCon">
-                <h2 class="filterCon__h2">Filters</h2>
-                <select id="selStatCharacters" class="filterCon__filter">
-                    <option value="" selected>Status</option>
-                    <option value="alive">Alive</option>
-                    <option value="dead">Dead</option>
-                    <option value="unknown">Unknow</option>
-                </select>
-                <select id="selSpecCharacters" class="filterCon__filter">
-                    <option value="" selected>Species</option>
-                    <option value="human">Human</option>
-                    <option value="alien">Alien</option>
-                    <option value="human">Humanoid</option>
-                    <option value="poopybutthole">Poopybutthole</option>
-                    <option value="mythological">Mythological</option>
-                    <option value="unknown">Unknown</option>
-                    <option value="animal">Animal</option>
-                    <option value="disease">Disease</option>
-                    <option value="robot">Robot</option>
-                    <option value="cronenberg">Cronenberg</option>
-                </select>
-                <select id="selGenCharacters" class="filterCon__filter">
-                    <option value="" selected>Gender</option>
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
-                    <option value="genderless">Genderless</option>
-                    <option value="unknown">Unknow</option>
-                </select>
-            </section>
-            <div id="conCharacters"></div>
-        </div>
-        <div id="conPage"></div>
-    </main>
-    <footer id="footer">
-        <p>Copyright © 2022. <a href="#" class="copyhref">@facufaia</a></p>
-        <p>All Rights Reserved</p>
-    </footer> 
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<script
+			defer
+			src="https://kit.fontawesome.com/a9c333dba5.js"
+			crossorigin="anonymous"
+		></script>
+		<script src="https://cdn.tailwindcss.com"></script>
+		<link rel="stylesheet" href="normalize.css" />
+		<link rel="stylesheet" href="style.css" />
+		<script defer src="script.js"></script>
+		<title>Rick & Morty WIKI</title>
+		<link
+			rel="icon"
+			type="image/png"
+			href="https://rickandmortyapi.com/favicon-32x32.png"
+		/>
+	</head>
+	<body>
+		<div id="modal"></div>
+		<header class="header">
+			<h2 class="header__h2">
+				Rick & Morty<span class="header__span"> Wiki</span>
+			</h2>
+			<nav class="header__nav">
+				<ul class="header__ul">
+					<li class="header__current">Characters</li>
+					<li class="header__li">
+						<a class="none" href="/episodes/episodes.html">Episodes</a>
+					</li>
+					<li class="header__li">
+						<a class="none" href="/locations/locations.html">Locations</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<main class="main">
+			<h1 class="main__h1 animate-fade-1">Characters</h1>
+			<input
+				id="selNameCharacters"
+				tipe="search"
+				placeholder="Rick Sanchez"
+				class="search animate-fade-1_2"
+			/>
+			<div class="content">
+				<section class="filterCon">
+					<h2 class="filterCon__h2 animate-fade-1">Filters</h2>
+					<div
+						class="relative flex flex-row-reverse w-[100%] flex-wrap group justify-between items-center animate-fade-1_2"
+					>
+						<select id="selStatCharacters" class="filterCon__filter">
+							<option value="" selected>Status</option>
+							<option value="alive">Alive</option>
+							<option value="dead">Dead</option>
+							<option value="unknown">Unknow</option>
+						</select>
+						<svg
+							class="absolute scale-75 group-hover:scale-[100%] transition duration-300 ease-in-out pointer"
+							xmlns="http://www.w3.org/2000/svg"
+							width="32"
+							height="32"
+							id="down-arrow"
+						>
+							<path
+								d="M22.782 13.8 17 19.582 11.218 13.8a1 1 0 0 0-1.414 1.414L16.29 21.7a.992.992 0 0 0 .71.292.997.997 0 0 0 .71-.292l6.486-6.486a1 1 0 0 0-1.414-1.414z"
+							></path>
+						</svg>
+					</div>
+					<div
+						class="relative flex flex-row-reverse w-[100%] group flex-wrap justify-between items-center animate-fade-1_2"
+					>
+						<select id="selSpecCharacters" class="filterCon__filter">
+							<option value="" selected>Species</option>
+							<option value="human">Human</option>
+							<option value="alien">Alien</option>
+							<option value="human">Humanoid</option>
+							<option value="poopybutthole">Poopybutthole</option>
+							<option value="mythological">Mythological</option>
+							<option value="unknown">Unknown</option>
+							<option value="animal">Animal</option>
+							<option value="disease">Disease</option>
+							<option value="robot">Robot</option>
+							<option value="cronenberg">Cronenberg</option>
+						</select>
+						<svg
+							class="absolute scale-75 group-hover:scale-[100%] transition duration-300 ease-in-out pointer"
+							xmlns="http://www.w3.org/2000/svg"
+							width="32"
+							height="32"
+							id="down-arrow"
+						>
+							<path
+								d="M22.782 13.8 17 19.582 11.218 13.8a1 1 0 0 0-1.414 1.414L16.29 21.7a.992.992 0 0 0 .71.292.997.997 0 0 0 .71-.292l6.486-6.486a1 1 0 0 0-1.414-1.414z"
+							></path>
+						</svg>
+					</div>
+					<div
+						class="relative flex flex-row-reverse w-[100%] group flex-wrap justify-between items-center animate-fade-1_2"
+					>
+						<select id="selGenCharacters" class="filterCon__filter">
+							<option value="" selected>Gender</option>
+							<option value="male">Male</option>
+							<option value="female">Female</option>
+							<option value="genderless">Genderless</option>
+							<option value="unknown">Unknow</option>
+						</select>
+						<svg
+							class="absolute scale-75 group-hover:scale-[100%] transition duration-300 ease-in-out pointer"
+							xmlns="http://www.w3.org/2000/svg"
+							width="32"
+							height="32"
+							id="down-arrow"
+						>
+							<path
+								d="M22.782 13.8 17 19.582 11.218 13.8a1 1 0 0 0-1.414 1.414L16.29 21.7a.992.992 0 0 0 .71.292.997.997 0 0 0 .71-.292l6.486-6.486a1 1 0 0 0-1.414-1.414z"
+							></path>
+						</svg>
+					</div>
+				</section>
+				<div id="loader" class="scale-50 animate-fade-1_2">
+					<?xml version="1.0" encoding="utf-8"?>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						xmlns:xlink="http://www.w3.org/1999/xlink"
+						style="
+							margin: auto;
+							background: rgb(241, 242, 243);
+							display: block;
+							shape-rendering: auto;
+							animation-play-state: running;
+							animation-delay: 0s;
+						"
+						width="200px"
+						height="200px"
+						viewBox="0 0 100 100"
+						preserveAspectRatio="xMidYMid"
+					>
+						<circle
+							cx="50"
+							cy="50"
+							fill="none"
+							stroke="#1d0e0b"
+							stroke-width="10"
+							r="35"
+							stroke-dasharray="164.93361431346415 56.97787143782138"
+							style="animation-play-state: running; animation-delay: 0s"
+						>
+							<animateTransform
+								attributeName="transform"
+								type="rotate"
+								repeatCount="indefinite"
+								dur="1s"
+								values="0 50 50;360 50 50"
+								keyTimes="0;1"
+								style="animation-play-state: running; animation-delay: 0s"
+							></animateTransform>
+						</circle>
+					</svg>
+				</div>
+				<div id="conCharacters" class="conCharacters"></div>
+			</div>
+			<div id="conPage"></div>
+		</main>
+	</body>
 </html>
