fixing navbar routes

--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -34,11 +34,11 @@
 			<nav class="header__nav">
 				<ul class="header__ul">
 					<li class="header__li">
-						<a class="none" href="/home.html">Characters</a>
+						<a class="none" href="../home.html">Characters</a>
 					</li>
 					<li class="header__current">Episodes</li>
 					<li class="header__li">
-						<a class="none" href="/locations/locations.html">Location</a>
+						<a class="none" href="../locations/locations.html">Location</a>
 					</li>
 				</ul>
 			</nav>
