--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 				<ul class="header__ul">
 					<li class="header__current">Characters</li>
 					<li class="header__li">
-						<a class="none" href="/episodes/episodes.html">Episodes</a>
+						<a class="none" href="episodes/episodes.html">Episodes</a>
 					</li>
 					<li class="header__li">
-						<a class="none" href="/locations/locations.html">Locations</a>
+						<a class="none" href="locations/locations.html">Locations</a>
 					</li>
 				</ul>
 			</nav>
