--- a/locations/locations.html
+++ b/locations/locations.html
@@ -34,10 +34,10 @@
 			<nav class="header__nav">
 				<ul class="header__ul">
 					<li class="header__li">
-						<a class="none" href="/home.html">Characters</a>
+						<a class="none" href="../home.html">Characters</a>
 					</li>
 					<li class="header__li">
-						<a class="none" href="/episodes/episodes.html">Episodes</a>
+						<a class="none" href="../episodes/episodes.html">Episodes</a>
 					</li>
 					<li class="header__current">Location</li>
 				</ul>
