--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -34,7 +34,7 @@
 			<nav class="header__nav">
 				<ul class="header__ul">
 					<li class="header__li">
-						<a class="none" href="../home.html">Characters</a>
+						<a class="none" href="../index.html">Characters</a>
 					</li>
 					<li class="header__current">Episodes</li>
 					<li class="header__li">
