--- a/locations/locations.html
+++ b/locations/locations.html
@@ -28,9 +28,9 @@
 	</head>
 	<body class="body_background">
 		<header class="header">
-			<h2 class="header__h2">
+			<a class="header__h2" href="../index.html">
 				Rick & Morty<span class="header__span"> Wiki</span>
-			</h2>
+			</a>
 			<nav class="header__nav">
 				<ul class="header__ul">
 					<li class="header__li">
